// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows search bar classes override when it's searchable 1`] = `
<div class="ais-RefinementList">
  <div class="ais-RefinementList-searchBox">
    <form action
          class="ais-SearchBox-form moar-classes"
          novalidate="novalidate"
          role="search"
    >
      <input aria-label="Search"
             autocapitalize="off"
             autocomplete="off"
             autocorrect="off"
             class="ais-SearchBox-input"
             maxlength="512"
             placeholder="Search here…"
             spellcheck="false"
             type="search"
      >
      <button class="ais-SearchBox-submit"
              title="Search"
              type="submit"
      >
        <svg aria-hidden="true"
             class="ais-SearchBox-submitIcon"
             height="10"
             viewbox="0 0 40 40"
             width="10"
        >
          <path d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z">
          </path>
        </svg>
      </button>
      <button class="ais-SearchBox-reset"
              hidden="hidden"
              title="Clear"
              type="reset"
      >
        <svg aria-hidden="true"
             class="ais-SearchBox-resetIcon"
             height="10"
             viewbox="0 0 20 20"
             width="10"
        >
          <path d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z">
          </path>
        </svg>
      </button>
      <span class="ais-SearchBox-loadingIndicator"
            hidden="hidden"
      >
        <svg aria-hidden="true"
             aria-label="Results are loading"
             class="ais-SearchBox-loadingIcon"
             height="16"
             stroke="#444"
             viewbox="0 0 38 38"
             width="16"
        >
          <g fill="none"
             fill-rule="evenodd"
          >
            <g stroke-width="2"
               transform="translate(1 1)"
            >
              <circle cx="18"
                      cy="18"
                      r="18"
                      stroke-opacity=".5"
              >
              </circle>
              <path d="M36 18c0-9.94-8.06-18-18-18">
                <animateTransform attributename="transform"
                                  dur="1s"
                                  from="0 18 18"
                                  repeatcount="indefinite"
                                  to="360 18 18"
                                  type="rotate"
                >
                </animateTransform>
              </path>
            </g>
          </g>
        </svg>
      </span>
    </form>
  </div>
  <ul class="ais-RefinementList-list">
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="yo"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            y
            <mark class="ais-Highlight-highlighted">
              o
            </mark>
          </span>
        </span>
        <span class="ais-RefinementList-count">
          20
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="how"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            how
          </span>
        </span>
        <span class="ais-RefinementList-count">
          10
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="are"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            are
          </span>
        </span>
        <span class="ais-RefinementList-count">
          8
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="you"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            you
          </span>
        </span>
        <span class="ais-RefinementList-count">
          9
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="doing"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            doing
          </span>
        </span>
        <span class="ais-RefinementList-count">
          100
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="?"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            ?
          </span>
        </span>
        <span class="ais-RefinementList-count">
          0
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`renders correctly (empty) 1`] = `
<div class="ais-RefinementList ais-RefinementList--noRefinement">
</div>
`;

exports[`renders correctly 1`] = `
<div class="ais-RefinementList">
  <ul class="ais-RefinementList-list">
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="yo"
        >
        <span class="ais-RefinementList-labelText">
          yo
        </span>
        <span class="ais-RefinementList-count">
          20
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="how"
        >
        <span class="ais-RefinementList-labelText">
          how
        </span>
        <span class="ais-RefinementList-count">
          10
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="are"
        >
        <span class="ais-RefinementList-labelText">
          are
        </span>
        <span class="ais-RefinementList-count">
          8
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="you"
        >
        <span class="ais-RefinementList-labelText">
          you
        </span>
        <span class="ais-RefinementList-count">
          9
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="doing"
        >
        <span class="ais-RefinementList-labelText">
          doing
        </span>
        <span class="ais-RefinementList-count">
          100
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="?"
        >
        <span class="ais-RefinementList-labelText">
          ?
        </span>
        <span class="ais-RefinementList-count">
          0
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`renders correctly when it's searchable 1`] = `
<div class="ais-RefinementList">
  <div class="ais-RefinementList-searchBox">
    <form action
          class="ais-SearchBox-form"
          novalidate="novalidate"
          role="search"
    >
      <input aria-label="Search"
             autocapitalize="off"
             autocomplete="off"
             autocorrect="off"
             class="ais-SearchBox-input"
             maxlength="512"
             placeholder="Search here…"
             spellcheck="false"
             type="search"
      >
      <button class="ais-SearchBox-submit"
              title="Search"
              type="submit"
      >
        <svg aria-hidden="true"
             class="ais-SearchBox-submitIcon"
             height="10"
             viewbox="0 0 40 40"
             width="10"
        >
          <path d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z">
          </path>
        </svg>
      </button>
      <button class="ais-SearchBox-reset"
              hidden="hidden"
              title="Clear"
              type="reset"
      >
        <svg aria-hidden="true"
             class="ais-SearchBox-resetIcon"
             height="10"
             viewbox="0 0 20 20"
             width="10"
        >
          <path d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z">
          </path>
        </svg>
      </button>
      <span class="ais-SearchBox-loadingIndicator"
            hidden="hidden"
      >
        <svg aria-hidden="true"
             aria-label="Results are loading"
             class="ais-SearchBox-loadingIcon"
             height="16"
             stroke="#444"
             viewbox="0 0 38 38"
             width="16"
        >
          <g fill="none"
             fill-rule="evenodd"
          >
            <g stroke-width="2"
               transform="translate(1 1)"
            >
              <circle cx="18"
                      cy="18"
                      r="18"
                      stroke-opacity=".5"
              >
              </circle>
              <path d="M36 18c0-9.94-8.06-18-18-18">
                <animateTransform attributename="transform"
                                  dur="1s"
                                  from="0 18 18"
                                  repeatcount="indefinite"
                                  to="360 18 18"
                                  type="rotate"
                >
                </animateTransform>
              </path>
            </g>
          </g>
        </svg>
      </span>
    </form>
  </div>
  <ul class="ais-RefinementList-list">
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="yo"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            y
            <mark class="ais-Highlight-highlighted">
              o
            </mark>
          </span>
        </span>
        <span class="ais-RefinementList-count">
          20
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="how"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            how
          </span>
        </span>
        <span class="ais-RefinementList-count">
          10
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="are"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            are
          </span>
        </span>
        <span class="ais-RefinementList-count">
          8
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="you"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            you
          </span>
        </span>
        <span class="ais-RefinementList-count">
          9
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="doing"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            doing
          </span>
        </span>
        <span class="ais-RefinementList-count">
          100
        </span>
      </label>
    </li>
    <li class="ais-RefinementList-item">
      <label class="ais-RefinementList-label">
        <input class="ais-RefinementList-checkbox"
               type="checkbox"
               value="?"
        >
        <span class="ais-RefinementList-labelText">
          <span class="ais-Highlight">
            ?
          </span>
        </span>
        <span class="ais-RefinementList-count">
          0
        </span>
      </label>
    </li>
  </ul>
</div>
`;
